<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/updateuser"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/txtTitle"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="User ID"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/hint_name"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/txtId" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/edtName" />


    <EditText
        android:id="@+id/edtPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/hint_number"
        android:inputType="phone"
        android:maxLength="10"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />


    <EditText
        android:id="@+id/edtCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/hint_city"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/edtPhoneNumber" />


    <EditText
        android:id="@+id/edtState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/hint_state"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/edtCity" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/add_data"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/btnRead"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtState"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnRead"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/read_data"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnAdd"
        app:layout_constraintTop_toBottomOf="@+id/edtState"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/delete_data"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/btnUpdate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRead"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/update_data"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDelete"
        app:layout_constraintTop_toBottomOf="@+id/btnRead"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtCancle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/cancle"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdate"
        tools:ignore="MissingConstraints" />
</android.support.constraint.ConstraintLayout>